Added single server and started delete
